test/fail/big_ret56.v3
//@execute 0=136; 1=148; 10=256
def main(a: int) -> int {
	var x = foo(1, 2, 3, 4, 5 + a, 6 + a, 7 + a, 8 + a, 9 + a, 10 + a, 11 + a, 12 + a, 13 + a, 14 + a, 15 + a, 16 + a);
	return x.0 + int.!(x.1) + x.2 + int.!(x.3) + x.4 + int.!(x.5) + x.6 + int.!(x.7)
		+ x.8 + int.!(x.9) + x.10 + int.!(x.11) + x.12 + int.!(x.13) + x.14 + int.!(x.15);
}
def foo(a: int, b: int, c: int, d: int, e: int, f: int, g: int, h: int, i: int, j: int, k: int, l: int, m: int, n: int, o: int, p: int)
		-> (int, long, int, long, int, long, int, long, int, long, int, long, int, long, int, long) {
	return (a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p);
}
